@@ -41,7 +41,6 @@ import picocli.CommandLine;
 
 import java.io.PrintStream;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -66,7 +65,7 @@ public class TestCommand implements BLauncherCmd {
     private final boolean exitWhenFinish;
 
     public TestCommand() {
-        this.projectPath = Paths.get(System.getProperty(ProjectConstants.USER_DIR));
+        this.projectPath = Path.of(System.getProperty(ProjectConstants.USER_DIR));
         this.outStream = System.out;
         this.errStream = System.err;
         this.exitWhenFinish = true;
@@ -239,7 +238,7 @@ public class TestCommand implements BLauncherCmd {
         String[] cliArgs = new String[0];
         if (!argList.isEmpty()) {
             if (!argList.get(0).matches(ProjectConstants.CONFIG_ARGS_PATTERN)) {
-                this.projectPath = Paths.get(argList.get(0));
+                this.projectPath = Path.of(argList.get(0));
                 if (argList.size() > 1) {
                     cliArgs = argList.subList(1, argList.size()).toArray(new String[0]);
                 }
