@@ -16,7 +16,6 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Objects;
 
 import static io.ballerina.projects.util.ProjectConstants.DIST_CACHE_DIRECTORY;
@@ -30,7 +29,7 @@ public class TestNativeImageCommandTest extends BaseCommandTest {
     private Path testResources;
     private Path testDistCacheDirectory;
     ProjectEnvironmentBuilder projectEnvironmentBuilder;
-    private static final Path LOG_FILE = Paths.get("./src/test/resources/compiler_plugin_tests/" +
+    private static final Path LOG_FILE = Path.of("./src/test/resources/compiler_plugin_tests/" +
             "log_creator_combined_plugin/compiler-plugin.txt");
 
     @BeforeClass
@@ -40,14 +39,14 @@ public class TestNativeImageCommandTest extends BaseCommandTest {
         Files.writeString(LOG_FILE, "");
         try {
             this.testResources = super.tmpDir.resolve("test-cmd-test-resources");
-            Path testBuildDirectory = Paths.get("build").toAbsolutePath();
+            Path testBuildDirectory = Path.of("build").toAbsolutePath();
             this.testDistCacheDirectory = testBuildDirectory.resolve(DIST_CACHE_DIRECTORY);
-            Path customUserHome = Paths.get("build", "user-home");
+            Path customUserHome = Path.of("build/user-home");
             Environment environment = EnvironmentBuilder.getBuilder().setUserHome(customUserHome).build();
             projectEnvironmentBuilder = ProjectEnvironmentBuilder.getBuilder(environment);
             URI testResourcesURI = Objects.requireNonNull(
                     getClass().getClassLoader().getResource("test-resources")).toURI();
-            Files.walkFileTree(Paths.get(testResourcesURI), new TestCommandTest.Copy(Paths.get(testResourcesURI),
+            Files.walkFileTree(Path.of(testResourcesURI), new TestCommandTest.Copy(Path.of(testResourcesURI),
                     this.testResources));
         } catch (URISyntaxException e) {
             Assert.fail("error loading resources");
@@ -108,7 +107,7 @@ public class TestNativeImageCommandTest extends BaseCommandTest {
     //TODO: Change the output once the resource generation plugin is disabled
     @Test(description = "Test a valid ballerina file")
     public void testTestBalFile() {
-        Path validBalFilePath = this.testResources.resolve("valid-test-bal-file").resolve("sample_tests.bal");
+        Path validBalFilePath = this.testResources.resolve("valid-test-bal-file/sample_tests.bal");
         System.setProperty(ProjectConstants.USER_DIR, this.testResources.resolve("valid-test-bal-file").toString());
         TestCommand testCommand = new TestCommand(validBalFilePath, printStream, printStream, false, true, "");
         new CommandLine(testCommand).parseArgs(validBalFilePath.toString());
@@ -123,7 +122,7 @@ public class TestNativeImageCommandTest extends BaseCommandTest {
     //TODO: Change the output once the resource generation plugin is disabled
     @Test(description = "Test a valid ballerina file with additional args")
     public void testTestBalFileWithAdditionalArgs() {
-        Path validBalFilePath = this.testResources.resolve("valid-test-bal-file").resolve("sample_tests.bal");
+        Path validBalFilePath = this.testResources.resolve("valid-test-bal-file/sample_tests.bal");
         System.setProperty(ProjectConstants.USER_DIR, this.testResources.resolve("valid-test-bal-file").toString());
         TestCommand testCommand = new TestCommand(validBalFilePath, printStream, printStream,
                 false, true, "-H:Name=foo");
@@ -139,7 +138,7 @@ public class TestNativeImageCommandTest extends BaseCommandTest {
     //TODO: Change the output once the resource generation plugin is disabled
     @Test(description = "Test a valid ballerina file with periods in the file name")
     public void testTestBalFileWithPeriods() {
-        Path validBalFilePath = this.testResources.resolve("valid-test-bal-file").resolve("sample.tests.bal");
+        Path validBalFilePath = this.testResources.resolve("valid-test-bal-file/sample.tests.bal");
 
         System.setProperty(ProjectConstants.USER_DIR, this.testResources.resolve("valid-test-bal-file").toString());
         TestCommand testCommand = new TestCommand(validBalFilePath, printStream, printStream,
