@@ -36,7 +36,6 @@ import io.ballerina.tools.text.LineRange;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -47,7 +46,7 @@ import java.util.stream.Collectors;
  */
 public class CodeActionUtils {
 
-    public static final Path RES_DIR = Paths.get("src/test/resources/").toAbsolutePath();
+    public static final Path RES_DIR = Path.of("src/test/resources/").toAbsolutePath();
     public static final String NEW = ".new";
 
     /**
@@ -128,10 +127,10 @@ public class CodeActionUtils {
      */
     public static Path getProjectPath(String sourceFilePath) {
 
-        Path sourcePath = Paths.get(sourceFilePath);
+        Path sourcePath = Path.of(sourceFilePath);
         String sourceFileName = sourcePath.getFileName().toString();
         Path sourceRoot = RES_DIR.resolve(sourcePath.getParent());
-        return Paths.get(sourceRoot.toString(), sourceFileName);
+        return Path.of(sourceRoot.toString(), sourceFileName);
     }
 
     /**
