@@ -56,7 +56,6 @@ import java.lang.reflect.Type;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -324,7 +323,7 @@ public abstract class AbstractCodeActionTest extends AbstractLSTest {
             return;
         }
         String[] uriComponents = data.getFileUri().replace("\"", "").split("/");
-        Path expectedPath = Paths.get(root.toUri());
+        Path expectedPath = Path.of(root.toUri());
         for (String uriComponent : uriComponents) {
             expectedPath = expectedPath.resolve(uriComponent);
         }
