@@ -22,7 +22,6 @@ import java.io.File;
 import java.io.IOException;
 import java.net.URI;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Map;
 
 /**
@@ -38,7 +37,7 @@ public class RenameTestUtil {
             JsonObject newChanges = new JsonObject();
             for (Map.Entry<String, JsonElement> jEntry : expected.getAsJsonObject("changes").entrySet()) {
                 String[] uriComponents = jEntry.getKey().replace("\"", "").split("/");
-                Path expectedPath = Paths.get(sourceRoot.toUri());
+                Path expectedPath = Path.of(sourceRoot.toUri());
                 for (String uriComponent : uriComponents) {
                     expectedPath = expectedPath.resolve(uriComponent);
                 }
@@ -52,7 +51,7 @@ public class RenameTestUtil {
                 JsonObject object = new JsonObject();
                 String[] uriComponents = entry.getAsJsonObject().getAsJsonObject("textDocument").get("uri")
                         .getAsString().replace("\"", "").split("/");
-                Path expectedPath = Paths.get(sourceRoot.toUri());
+                Path expectedPath = Path.of(sourceRoot.toUri());
                 for (String uriComponent : uriComponents) {
                     expectedPath = expectedPath.resolve(uriComponent);
                 }
