@@ -56,7 +56,6 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -200,7 +199,7 @@ public class FormatterUtils {
 
     private static Optional<Path> convertConfigurationPath(String path) {
         try {
-            return Optional.of(Paths.get(path));
+            return Optional.of(Path.of(path));
         } catch (InvalidPathException ex) {
             return Optional.empty();
         }
