@@ -30,7 +30,6 @@ import org.wso2.ballerinalang.compiler.util.ProjectDirConstants;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.util.Map;
 
@@ -343,7 +342,7 @@ public class PackagingNegativeTestCase extends BaseTest {
         initProject(projectPath);
         String msg = "error: you are trying to run a ballerina file inside a package within a project. Try running " +
                 "'ballerina run <package-name>'";
-        String sourcePath = Paths.get(moduleName, "main.bal").toString();
+        String sourcePath = Path.of(moduleName, "main.bal").toString();
         balClient.runMain("run", new String[] {sourcePath}, envVariables, new String[0],
                           new LogLeecher[]{new LogLeecher(msg)}, projectPath.toString());
     }
@@ -354,7 +353,7 @@ public class PackagingNegativeTestCase extends BaseTest {
         Path projectPath = tempProjectDirectory.resolve("projectxyz");
         String msg = "error: you are trying to build a ballerina file inside a package within a project. Try running " +
                 "'bal build <package-name>'";
-        String sourcePath = Paths.get(moduleName, "main.bal").toString();
+        String sourcePath = Path.of(moduleName, "main.bal").toString();
         balClient.runMain("build", new String[] {sourcePath}, envVariables, new String[0],
                           new LogLeecher[]{new LogLeecher(msg)}, projectPath.toString());
     }
